almost finished product

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -6,20 +6,30 @@
     </svg>
 </div>
 <div class="bg-beige py-8">
-    <h2 class="text-7xl px-6 font-extrabold text-center text-darker-green my-4">1. ЗА КОГО Е ТОЗИ КУРС</h2>
-    <p class="text-center text-darker-green mx-auto font-bold text-3xl md:w-[70%] w-[90%]">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt expedita, quisquam, consequuntur eius blanditiis quae corporis culpa id ducimus quibusdam unde dolorem laboriosam quas at beatae minima autem amet excepturi?</p>
+    <h2 class="text-7xl px-6 font-extrabold text-center text-darker-green my-4">1. КОЙ РАБОТИ ПО ТОЗИ КУРС?</h2>
+    <ul class="text-darker-green mx-auto font-bold text-3xl lg:w-[50%] md:w-[70%] w-[90%] p-6 list-disc ">
+        <li class="mb-4">
+            Съпруг - бакалавър икономист. Автор на мотивационни книги(предстои излизането на втора), възпитаник на спортно училище, възприел личностното развитие(за съжаление от скоро) като начин на живот.
+        </li>
+        <li class="mb-4">
+            Съпруга - бакалавър икономист, магистър по психология и психотерапевт, професионално занимавала се в младите си години със спорт и активно спортуваща и до ден днешен. Привърженик на здравословния начин на живот.
+        </li>
+        <li class="mb-4">
+            Дете(вече мъж) - програмист, спортист, културист и всичко на ист. С две думи нашето съкровище, без което този проект нямаше да види бял свят. Взел дейно участие през всички етапи и процеси на неговото създаване.
+        </li>
+    </ul>
 </div>
 <div class="bg-beige py-8">
-    <h2 class="text-7xl px-6 font-extrabold text-center text-darker-green my-4">2. КАК ЩЕ ВИ ПОМОГНЕ ТОЙ</h2>
-    <p class="text-center text-darker-green mx-auto font-bold text-3xl md:w-[70%] w-[90%]">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt expedita, quisquam, consequuntur eius blanditiis quae corporis culpa id ducimus quibusdam unde dolorem laboriosam quas at beatae minima autem amet excepturi?</p>
+    <h2 class="text-7xl px-6 font-extrabold text-center text-darker-green my-4">2. КАКВА Е ПРИЧИНАТА ЗА ПОЯВАТА МУ?</h2>
+    <p class="text-center text-darker-green mx-auto font-bold text-3xl md:w-[70%] w-[90%]">Мотивите са лични. От рак на белите дробове почина нашият баща и дядо, който последиците от лошия навик го сполетяха внезапно. Няма да се впускам в подробности какъв ужас преживя той и всички ние покрай него, но това не го пожелавам на никого. С този курс се надяваме да помогнем на всеки, който иска да спести на себе си и своите близки този кошмар.</p>
 </div>
 <div class="bg-beige py-8">
-    <h2 class="text-7xl px-6 font-extrabold text-center text-darker-green my-4">3. ПОЛЕЗНИ НАВИЦИ</h2>
-    <p class="text-center text-darker-green mx-auto font-bold text-3xl md:w-[70%] w-[90%]">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt expedita, quisquam, consequuntur eius blanditiis quae corporis culpa id ducimus quibusdam unde dolorem laboriosam quas at beatae minima autem amet excepturi?</p>
+    <h2 class="text-7xl px-6 font-extrabold text-center text-darker-green my-4">3. ЗА КОГО Е ТОЗИ КУРС?</h2>
+    <p class="text-center text-darker-green mx-auto font-bold text-3xl md:w-[70%] w-[90%]">Той е за всеки, който под някаква форма приема системно никотин, и иска да се откаже от този вреден навик. Независимо дали става въпрос за обикновена, електрона цигара или за друг начин на приемане на никотин, този курс е за Вас.</p>
 </div>
 <div class="bg-beige py-8">
-    <h2 class="text-7xl px-6 font-extrabold text-center text-darker-green my-4">4. САМОКОНТРОЛ</h2>
-    <p class="text-center text-darker-green mx-auto font-bold text-3xl md:w-[70%] w-[90%]">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt expedita, quisquam, consequuntur eius blanditiis quae corporis culpa id ducimus quibusdam unde dolorem laboriosam quas at beatae minima autem amet excepturi?</p>
+    <h2 class="text-7xl px-6 font-extrabold text-center text-darker-green my-4">4. ЗАЩО ДА ИНВЕСТИРАМ В ТОЗИ КУРС?</h2>
+    <p class="text-center text-darker-green mx-auto font-bold text-3xl md:w-[70%] w-[90%]">Въобще тука не става въпрос за парите, които всеки пушач пръска за цигари и тези, които един ден най-вероятно ще дава за лекарства, а за дните, които човек  убива с този порок, и които може да спаси, ако се откаже от него, защото няма по-ценно капиталовложение от това да инвестираш в своето здраве.</p>
 </div>
 <div class="bg-beige">
     <svg class="h-16 w-full" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" preserveAspectRatio="none">
