--- a/src/app/orders/redeem-code/redeem-code.component.html
+++ b/src/app/orders/redeem-code/redeem-code.component.html
@@ -20,7 +20,7 @@
           </div>
           <re-captcha #captchaRef size="invisible" (resolved)="$event && captchaExecute($event)" siteKey="6LdjVRcqAAAAAPFXyB1OByj80mGV1vbM3QI6gRZq"></re-captcha>
           <div class="flex items-center justify-between">
-              <button [disabled]="this.inSubmission" [ngClass]="{'bg-slate-600 text-white hover:bg-slate-400 hover:text-white disabled': this.inSubmission}" class="bg-darker-green hover:bg-darker-blue text-beige hover:text-darker-green font-bold py-2 px-4 rounded-full focus:outline-none focus:shadow-outline" type="submit">
+              <button [disabled]="this.inSubmission" [ngClass]="{'bg-slate-600 text-white hover:bg-slate-400 hover:text-white disabled': this.inSubmission}" class="bg-darker-green transition-colors duration-300 hover:bg-darker-blue text-beige hover:text-darker-green font-bold py-2 px-4 rounded-full focus:outline-none focus:shadow-outline" type="submit">
                 Активирай акаунт
               </button>
           </div>    
