--- a/src/app/user/register/register.component.html
+++ b/src/app/user/register/register.component.html
@@ -79,7 +79,7 @@
         <re-captcha #captchaRef size="invisible" (resolved)="$event && captchaExecute($event)" siteKey="6LdjVRcqAAAAAPFXyB1OByj80mGV1vbM3QI6gRZq"></re-captcha>
         <div class="flex items-center justify-between">
           <button 
-          class="bg-darker-green hover:bg-darker-blue text-beige hover:text-darker-green font-bold py-2 px-4 rounded-full focus:outline-none focus:shadow-outline" 
+          class="bg-darker-green transition-colors duration-300 hover:bg-darker-blue text-beige hover:text-darker-green font-bold py-2 px-4 rounded-full focus:outline-none focus:shadow-outline" 
           type="submit"
           [ngClass]="{'bg-slate-600 text-white hover:bg-slate-400 hover:text-white disabled': this.inSubmission}"
           [disabled]="registerForm.invalid || inSubmission"
