--- a/src/app/videos/videos-list/videos-list.component.html
+++ b/src/app/videos/videos-list/videos-list.component.html
@@ -9,10 +9,10 @@
                 </svg>
             </div>
             <input name="searchTerm" [(ngModel)]="searchTerm" type="search" id="default-search" class="block w-full p-4 ps-10 text-sm bg-lighter-green text-darker-blue border placeholder-darker-blue border-green-500 rounded-2xl" placeholder="Търсете по заглавие..."/>
-            <button type="submit" class="text-white absolute end-2.5 bottom-2.5 bg-darker-green hover:bg-green-900 focus:ring-4 focus:outline-none font-medium rounded-lg text-sm px-4 py-2">Търси</button>
+            <button type="submit" class="text-white transition-colors duration-300 absolute end-2.5 bottom-2.5 bg-darker-green hover:bg-green-900 focus:ring-4 focus:outline-none font-medium rounded-lg text-sm px-4 py-2">Търси</button>
         </div>
     </form>
-    <button (click)="toggleFavourites()" [ngClass]="{'bg-beige border-2 hover:bg-white border-darker-green text-darker-green': showFavourites === true, 'bg-darker-green border hover:bg-darker-blue border-beige text-beige' : showFavourites === false }" class="mx-auto border block font-medium rounded-lg text-base px-4 py-2">Любими <i class="fa-solid fa-star"></i></button>
+    <button (click)="toggleFavourites()" [ngClass]="{'bg-beige border-2 hover:bg-white border-darker-green text-darker-green': showFavourites === true, 'bg-darker-green border hover:bg-darker-blue border-beige text-beige' : showFavourites === false }" class="mx-auto transition-colors duration-300 border block font-medium rounded-lg text-base px-4 py-2">Любими <i class="fa-solid fa-star"></i></button>
 </div>
 <div class="min-h-[40vh] grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6 py-10 px-4 sm:px-8 md:px-15 lg:px-20 bg-darker-green">    
     <app-video-card *ngFor="let video of videos" [videoInfo]="video"></app-video-card>
