Making some changes to the landing page.

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -21,7 +21,7 @@
                           <a routerLink="/" class="hover:underline hover:cursor-pointer">Без цигарен дим</a>
                       </li>
                       <li>
-                          <a href="https://k-kostadinov.store/" target="_blank" class="hover:underline">Мъдрости от пепелта</a>
+                          <a href="https://krasimir-kostadinov.eu/" target="_blank" class="hover:underline">Мъдрости от пепелта</a>
                       </li>
                   </ul>
               </div>
@@ -51,7 +51,7 @@
       </div>
       <hr class="my-6 border-beige sm:mx-auto" />
       <div class="sm:flex justify-center sm:items-center">
-          <span class="text-sm text-darker-blue sm:text-center">© 2024 <a routerLink="/" class="hover:underline hover:cursor-pointer font-bold">Без цигарен дим™</a>. Всички правa запазени.
+          <span class="text-sm text-darker-blue sm:text-center">© 2025 <a routerLink="/" class="hover:underline hover:cursor-pointer font-bold">Без цигарен дим™</a>. Всички правa запазени.
           </span>
       </div>
     </div>
