--- a/src/app/user/register/register.component.html
+++ b/src/app/user/register/register.component.html
@@ -1,6 +1,6 @@
 <h1 class="text-center pt-10 text-5xl font-bold text-beige bg-darker-green">РЕГИСТРАЦИЯ</h1>
 <div class="w-full min-h-[60vh] py-14 bg-darker-green">
-  <div class="w-full max-w-xs mx-auto">
+  <div class="w-full max-w-xl mx-auto">
       <app-alert *ngIf="showAlert" [color]="alertColor">
         {{  alertMsg  }}
       </app-alert>
