Updating to Angular 19

--- a/src/app/orders/order/order.component.html
+++ b/src/app/orders/order/order.component.html
@@ -72,7 +72,7 @@
                 </div>
                 <p class="text-darker-green">--</p>
                 <div class="flex justify-center rounded-lg bg-lighter-green w-[45%] text-center">
-                    <p>{{this.userInfo?.name}}</p>
+                    <p>{{userInfo?.name}}</p>
                 </div>
             </div>
             <div class="mb-1 flex justify-between">
@@ -81,7 +81,7 @@
                 </div>
                 <p class="text-darker-green">--</p>
                 <div class="flex justify-center rounded-lg bg-lighter-green w-[45%] text-center">
-                    <p>{{this.userInfo?.email}}</p>
+                    <p>{{userInfo?.email}}</p>
                 </div>
             </div>
             <div class="mb-1 flex justify-between">
@@ -90,7 +90,7 @@
                 </div>
                 <p class="text-darker-green">--</p>
                 <div class="flex justify-center rounded-lg bg-lighter-green w-[45%] text-center">
-                    <p>{{this.userInfo?.phone}}</p>
+                    <p>{{userInfo?.phone}}</p>
                 </div>
             </div>
             <div class="mb-1 flex justify-between">
@@ -99,7 +99,7 @@
                 </div>
                 <p class="text-darker-green">--</p>
                 <div class="flex justify-center rounded-lg bg-lighter-green w-[45%] text-center">
-                    <p>{{this.orderInfo?.city}}</p>
+                    <p>{{orderInfo?.city}}</p>
                 </div>
             </div>
             <div class="mb-1 flex justify-between">
@@ -108,7 +108,7 @@
                 </div>
                 <p class="text-darker-green">--</p>
                 <div class="flex justify-center rounded-lg bg-lighter-green w-[45%] overflow-y-auto break-words text-center">
-                    <p>{{this.orderInfo?.address}}</p>
+                    <p>{{orderInfo?.address}}</p>
                 </div>
             </div>
             <div class="w-full flex justify-around gap-3">
