--- a/src/app/faq-module/faq-module.component.html
+++ b/src/app/faq-module/faq-module.component.html
@@ -1,6 +1,6 @@
 <div class="bg-darker-green py-8">
   <div class="mx-auto shadow-md xl:max-w-7xl max-w-4xl bg-beige my-2 rounded-3xl p-12">
-      <div [ngClass]="{'xl:flex-row-reverse':this.reversed, 'xl:flex-row': !this.reversed}" class="flex flex-col-reverse items-center xl:items-start xl:gap-6">
+      <div [ngClass]="{'xl:flex-row-reverse':reversed, 'xl:flex-row': !reversed}" class="flex flex-col-reverse items-center xl:items-start xl:gap-6">
         <div class="my-auto">
           <h2 class="text-3xl text-center tracking-tight font-extrabold text-darker-blue sm:text-4xl md:text-5xl">
             <span class="block">{{titleQuestionSpan1}}</span>
